<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xmlcategory"
     />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/category_type"
        android:textColor="@color/colorPrimaryDark"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xmlarea"
        android:textColor="@color/colorPrimaryDark"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/area"
        />
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/dimen90dp"
        android:layout_height="@dimen/dimen60dp"
        android:id="@+id/vedio_image"
        android:contentDescription="@string/redirects_to_youtube_vedio"
        android:src="@mipmap/player"
        android:scaleType="fitXY"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xmlinstructions"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instructions"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xmlother_info"
        android:id="@+id/extraLink"
        android:textColor="@color/yello"
        android:autoLink="web"
        />
</LinearLayout>