<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RecipeDetail">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsebar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/item_image"
                android:src="@drawable/ic_launcher_background"
                android:fitsSystemWindows="true"
                android:contentDescription="@string/recipe_image"
                android:scaleType="centerCrop"
                app:layout_collapseMode="pin"/>

                <ImageView
                    android:id="@+id/id_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen8dp"
                    android:layout_marginStart="@dimen/dimen8dp"
                    android:src="@mipmap/un_fav"
                    android:contentDescription="@string/favorite_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </android.support.constraint.ConstraintLayout>
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <include layout="@layout/item_indetail"/>
    </android.support.v4.widget.NestedScrollView>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bannerone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adUnitId="ca-app-pub-6336523906622902/1584570296"
        ads:adSize="BANNER"
        android:layout_marginTop="@dimen/ad_margintop"
        android:layout_marginBottom="@dimen/ad_marginbottom"
        android:paddingStart="@dimen/ad_marginleft"
        android:paddingEnd="@dimen/ad_marginright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabbutton"
        android:layout_width="@dimen/fabwidth"
        android:layout_height="@dimen/fabheight"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fabmargin"
        android:contentDescription="@string/add_to_the_widget"
        android:src="@mipmap/add"
        />

</android.support.design.widget.CoordinatorLayout>